# CorpTrain_Rag_Frontend

./: README.md  config.py  env.example  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml  secrets.toml.example
components/: chat_interface.py  sidebar.py
services/: api_client.py
utils/: formatting.py
