[project]
name = "rag-frontend"
version = "0.1.0"
description = "RAG System Frontend - Streamlit Application"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.28.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "streamlit-mic-recorder>=0.0.8",
    "markdown>=3.5.0",
]

[tool.uv]
dev-dependencies = []
